k8s/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deploy
  namespace: vkpaints-dev-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-container
        image: shubha20/vk-paints_user-service:v1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
