k8s/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: vkpaints-dev-ns
spec:
  selector:
    app: user-service
  ports:
  - port: 80
    targetPort: 3000
